--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "discord.js": "^14.13.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
-    "@types/node": "^20.8.0"
+    "@types/node": "^20.8.0",
+    "@types/express": "^4.17.17"
   }
 } 
