--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "@supabase/supabase-js": "^2.0.0"
+    "@supabase/supabase-js": "^2.0.0",
+    "discord-interactions": "^2.3.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
     "@types/node": "^20.8.0",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@vercel/node": "^1.15.0"
   }
 } 
