--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node"
-    }
+    { "src": "MNDiscordBot/api/**/*.ts", "use": "@vercel/node" }
   ]
 }
