--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
   "version": 2,
-  "builds": [{ "src": "api/**/*.ts", "use": "@vercel/node" }]
+  "builds": [
+    { "src": "api/**/*.ts", "use": "@vercel/node" }
+  ]
 }
