--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
-    "vercel-build": "echo 'No build needed for Vercel deployment'"
+    "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
     "discord.js": "^14.13.0",
