--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/**/*.ts", "use": "@vercel/node" }
+    { "src": "api/discord.ts", "use": "@vercel/node" }
   ]
 }
