--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "vercel-build": "mkdir -p public"
+    "vercel-build": "mkdir -p public && echo 'placeholder' > public/.vercelkeep"
   },
   "dependencies": {
     "discord.js": "^14.13.0",
