--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "compile": "tsc",
-    "start": "node dist/index.js",
+    "start": "npm run compile && node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "vercel-build": "mkdir -p public && echo 'placeholder' > public/.vercelkeep"
