--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "npm run compile && node dist/src/index.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "vercel-build": "mkdir -p public && echo 'placeholder' > public/.vercelkeep"
+    "vercel-build": "tsx scripts/registerCommands.ts && mkdir -p public && echo 'placeholder' > public/.vercelkeep",
+    "register:commands": "tsx scripts/registerCommands.ts"
   },
   "dependencies": {
     "discord.js": "^14.13.0",
