--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run compile && node dist/src/index.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "vercel-build": "tsx scripts/registerCommands.ts && mkdir -p public && echo 'placeholder' > public/.vercelkeep",
+    "vercel-build": "npm run build && node dist/scripts/registerCommands.js && mkdir -p public && echo 'placeholder' > public/.vercelkeep",
     "register:commands": "tsx scripts/registerCommands.ts"
   },
   "dependencies": {
