--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "npm run compile && node dist/src/index.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "vercel-build": "npm run build && node dist/scripts/registerCommands.js && mkdir -p public && echo 'placeholder' > public/.vercelkeep",
-    "register:commands": "tsx scripts/registerCommands.ts"
+    "vercel-build": "node scripts/registerCommands.js && mkdir -p public && echo 'placeholder' > public/.vercelkeep",
+    "register:commands": "node scripts/registerCommands.js"
   },
   "dependencies": {
     "discord.js": "^14.13.0",
