--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.0.0",
-    "@napi-rs/canvas": "^0.1.57",
+    "skia-canvas": "^0.9.48",
     "discord-interactions": "^2.3.0"
   },
   "engines": {
