--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.0.0",
     "skia-canvas": "^2.0.2",
-    "discord-interactions": "^2.3.0"
+    "discord-interactions": "^2.3.0",
+    "typescript": "^5.2.2",
+    "@types/node": "^20.8.0",
+    "@types/express": "^4.17.17"
   },
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
-    "@types/node": "^20.8.0",
-    "@types/express": "^4.17.17",
     "@vercel/node": "^1.15.0"
   }
 } 
