--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.0.0",
+    "pg": "^8.11.3",
     "skia-canvas": "^2.0.2",
     "discord-interactions": "^2.3.0",
     "typescript": "^5.2.2",
@@ -28,6 +29,9 @@
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
-    "@vercel/node": "^1.15.0"
+    "@vercel/node": "^1.15.0",
+    "@types/pg": "^8.6.6",
+    "@types/node": "^20.8.0",
+    "@types/express": "^4.17.17"
   }
 } 
