--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "discord-interactions": "^2.3.0",
     "typescript": "^5.2.2",
     "@types/node": "^20.8.0",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "p-queue": "^9.1.0"
   },
   "engines": {
     "node": "22.x"
