--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && node dist/src/index.js",
+    "start": "npm run compile && node dist/src/server.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "vercel-build": "node scripts/registerCommands.js && mkdir -p public && echo 'placeholder' > public/.vercelkeep",
