--- a/fly.toml
+++ b/fly.toml
@@ -15,7 +15,7 @@ primary_region = 'sea'
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
+  processes = ['web']
 
 [[vm]]
   memory = '1gb'
