--- a/fly.toml
+++ b/fly.toml
@@ -12,9 +12,9 @@ primary_region = 'sea'
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['web']
 
 [[vm]]
