--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "vercel-build": "node scripts/registerCommands.js && mkdir -p public && echo 'placeholder' > public/.vercelkeep",
-    "register:commands": "node scripts/registerCommands.js"
+    "register:commands": "node scripts/registerCommands.js",
+    "tests": "jest",
+    "tests:watch": "jest --watch"
   },
   "dependencies": {
     "discord.js": "^14.13.0",
@@ -33,6 +35,11 @@
     "@vercel/node": "^1.15.0",
     "@types/pg": "^8.6.6",
     "@types/node": "^20.8.0",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "@types/jest": "^29.5.3",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.12"
   }
-} 
+}
