--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "server-search": "node scripts/serverSearch.js"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.17.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "@supabase/supabase-js": "^2.0.0",
     "pg": "^8.11.3",
+    "ffmpeg-static": "^5.2.0",
+    "prism-media": "^1.3.5",
+    "opusscript": "^0.0.8",
     "skia-canvas": "^2.0.2",
     "discord-interactions": "^2.3.0",
     "typescript": "^5.2.2",
